Fix issue with toast container not showing on right location

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -116,7 +116,20 @@ label,
     font-size: 1rem;
     color: #15020A;
 }
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999999;
+}
 
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+}
 @media (min-width: 992px) {
     .nav-link {
         font-size: 1.4rem;
